# ATM-Launcher

./: .gitignore  README.md  build-linux.sh  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
graphify-out/: .graphify_analysis.json  .graphify_root  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: release-next.sh
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/atm-batch-launcher/: AtmBatchLauncher.java  README.md  run-launcher.bat  run-launcher.sh
src-tauri/src/: main.rs
src/assets/cts-verifier/: ListTestCaseAvailable.json  TestCaseToActivity.json
