[package]
name = "atm-tauri-launcher"
version = "0.1.59"
description = "ATM Batch Launcher"
authors = ["ATM Automation"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.4", features = ["devtools"] }
tauri-plugin-dialog = "2"
